# MOEXParseBot

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/crates/: bot.rs  handler.rs  mod.rs  request_data.rs  requests.rs
src/utils/: json_processing.rs  mod.rs
